feat: remove nil keys packages

--- a/packages/remove-falsy-keys/project.json
+++ b/packages/remove-falsy-keys/project.json
@@ -18,7 +18,7 @@
     "build": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "tsc -p packages/remove-falsy-keys/tsconfig.builder.json --outDir ./dist"
+        "command": "tsc -p packages/remove-falsy-keys/tsconfig.lib.json --emitDeclarationOnly --outDir ./dist"
       },
       "dependsOn": [
         {
