--- a/packages/remove-nil-keys/tsconfig.lib.json
+++ b/packages/remove-nil-keys/tsconfig.lib.json
@@ -1,10 +1,9 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "../../dist/out-tsc",
     "declaration": true,
-    "types": ["node"],
-    "emitDeclarationOnly": true
+    "types": ["node"]
   },
   "include": ["src/**/*.ts"],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
