--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "docs": "nx serve docs",
     "test": "nx run-many --all --target=test",
     "lint": "nx run-many --all --target=lint",
     "build": "nx run-many --all --target=build",
@@ -10,9 +11,19 @@
     "publish:production": "nx run-many --all --target=publish:build:dev"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@docusaurus/core": "2.1.0",
+    "@docusaurus/preset-classic": "2.1.0",
+    "@mdx-js/react": "^1.6.22",
+    "clsx": "^1.2.1",
+    "prism-react-renderer": "^1.3.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
   "devDependencies": {
-    "tslib": "^2.3.0",
+    "@docusaurus/module-type-aliases": "2.1.0",
+    "@nx-plus/docusaurus": "^15.0.0-rc.0",
+    "@nx/esbuild": "16.7.4",
     "@nx/eslint-plugin": "16.7.4",
     "@nx/jest": "16.7.4",
     "@nx/js": "16.7.4",
@@ -21,6 +32,7 @@
     "@types/node": "18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "esbuild": "0.19.2",
     "eslint": "~8.46.0",
     "eslint-config-prettier": "8.1.0",
     "jest": "^29.4.1",
@@ -29,9 +41,8 @@
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.3",
-    "@nx/esbuild": "16.7.4",
-    "esbuild": "0.19.2"
+    "tslib": "^2.3.0",
+    "typescript": "~5.1.3"
   },
   "workspaces": [
     "packages/*"
