--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "remove-falsy-keys": ["packages/remove-falsy-keys/src/index.ts"],
-      "remove-nil-keys": ["packages/remove-nil-keys/src/index.ts"]
+      "remove-nil-keys": ["packages/remove-nil-keys/src/index.ts"],
+      "toolkit": ["packages/toolkit/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
