--- a/packages/toolkit/project.json
+++ b/packages/toolkit/project.json
@@ -1,17 +1,17 @@
 {
-  "name": "remove-nil-keys",
+  "name": "toolkit",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "packages/remove-nil-keys/src",
+  "sourceRoot": "packages/toolkit/src",
   "projectType": "library",
   "targets": {
     "bundler": {
       "executor": "@nx/esbuild:esbuild",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/packages/remove-nil-keys",
-        "main": "packages/remove-nil-keys/src/index.ts",
-        "tsConfig": "packages/remove-nil-keys/tsconfig.lib.json",
-        "assets": ["packages/remove-nil-keys/*.md"],
+        "outputPath": "dist/packages/toolkit",
+        "main": "packages/toolkit/src/index.ts",
+        "tsConfig": "packages/toolkit/tsconfig.lib.json",
+        "assets": ["packages/toolkit/*.md"],
         "generatePackageJson": true,
         "format": ["esm", "cjs"]
       }
@@ -19,7 +19,7 @@
     "build": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "tsc -p packages/remove-nil-keys/tsconfig.lib.json --emitDeclarationOnly --outDir ./dist"
+        "command": "tsc -p packages/toolkit/tsconfig.lib.json --emitDeclarationOnly --outDir ./dist"
       },
       "dependsOn": [
         {
@@ -57,8 +57,8 @@
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": [
-          "packages/remove-nil-keys/**/*.ts",
-          "packages/remove-nil-keys/package.json"
+          "packages/toolkit/**/*.ts",
+          "packages/toolkit/package.json"
         ]
       }
     },
@@ -66,7 +66,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "packages/remove-nil-keys/jest.config.ts",
+        "jestConfig": "packages/toolkit/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
