--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@guildadev/remove-falsy-keys": "1.0.0",
-    "@guildadev/remove-nil-keys": "1.0.1"
+    "@guildadev/remove-nil-keys": "1.0.1",
+    "@guildadev/get-initials": "1.0.0"
   }
 }
