--- a/packages/jsonapi-to-model/tsconfig.json
+++ b/packages/jsonapi-to-model/tsconfig.json
@@ -9,7 +9,8 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "useDefineForClassFields": true,
   },
   "files": [],
   "include": [],
