--- a/packages/jsonapi-to-model/tsconfig.spec.json
+++ b/packages/jsonapi-to-model/tsconfig.spec.json
@@ -3,12 +3,14 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
-    "types": ["jest", "node"]
+    "types": ["jest", "node"],
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
   },
   "include": [
     "jest.config.ts",
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
-, "tests/Deserializer.test.ts"  ]
+, "tests/model-singular.test.ts"  ]
 }
