--- a/packages/jsonapi-to-model/tsconfig.spec.json
+++ b/packages/jsonapi-to-model/tsconfig.spec.json
@@ -11,6 +11,7 @@
     "jest.config.ts",
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
-    "src/**/*.d.ts"
-, "tests/model-singular.test.ts"  ]
+    "src/**/*.d.ts", 
+    "tests/*.test.ts"  
+  ]
 }
