--- a/package.json
+++ b/package.json
@@ -13,25 +13,25 @@
   "dependencies": {},
   "devDependencies": {
     "tslib": "^2.3.0",
-    "@nx/eslint-plugin": "16.7.4",
-    "@nx/jest": "16.7.4",
-    "@nx/js": "16.7.4",
-    "@nx/linter": "16.7.4",
+    "@nx/eslint-plugin": "19.5.7",
+    "@nx/jest": "19.5.7",
+    "@nx/js": "19.5.7",
     "@types/jest": "^29.4.0",
-    "@types/node": "18.7.1",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "eslint": "~8.46.0",
-    "eslint-config-prettier": "8.1.0",
+    "@types/node": "18.19.9",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "nx": "16.7.4",
+    "nx": "19.5.7",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.3",
-    "@nx/esbuild": "16.7.4",
-    "esbuild": "0.19.2"
+    "typescript": "5.5.4",
+    "@nx/esbuild": "19.5.7",
+    "esbuild": "^0.19.2",
+    "@nx/eslint": "19.5.7"
   },
   "workspaces": [
     "packages/*"
