--- a/packages/get-initials/project.json
+++ b/packages/get-initials/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/get-initials/src",
   "projectType": "library",
+  "tags": [],
   "targets": {
     "bundler": {
       "executor": "@nx/esbuild:esbuild",
@@ -53,29 +54,14 @@
       ]
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": [
-          "packages/get-initials/**/*.ts",
-          "packages/get-initials/package.json"
-        ]
-      }
+      "executor": "@nx/eslint:lint"
     },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "packages/get-initials/jest.config.ts",
-        "passWithNoTests": true
-      },
-      "configurations": {
-        "ci": {
-          "ci": true,
-          "codeCoverage": true
-        }
+        "jestConfig": "packages/get-initials/jest.config.ts"
       }
     }
-  },
-  "tags": []
+  }
 }
