--- a/packages/toolkit/project.json
+++ b/packages/toolkit/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/toolkit/src",
   "projectType": "library",
+  "tags": [],
   "targets": {
     "bundler": {
       "executor": "@nx/esbuild:esbuild",
@@ -58,29 +59,14 @@
       ]
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": [
-          "packages/toolkit/**/*.ts",
-          "packages/toolkit/package.json"
-        ]
-      }
+      "executor": "@nx/eslint:lint"
     },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "packages/toolkit/jest.config.ts",
-        "passWithNoTests": true
-      },
-      "configurations": {
-        "ci": {
-          "ci": true,
-          "codeCoverage": true
-        }
+        "jestConfig": "packages/toolkit/jest.config.ts"
       }
     }
-  },
-  "tags": []
+  }
 }
