--- a/packages/jsonapi-to-model/package.json
+++ b/packages/jsonapi-to-model/package.json
@@ -1,19 +1,8 @@
 {
   "name": "@guildadev/jsonapi-to-model",
-  "version": "1.0.0",
+  "version": "1.0.16",
   "private": false,
+  "dependencies": {},
   "type": "module",
-  "typings": "./src/index.d.ts",
-  "dependencies": {
-    "reflect-metadata": "0.2.2"
-  },
-  "exports": {
-    ".": {
-      "import": "./index.js",
-      "require": "./index.cjs"
-    }
-  },
-  "devDependencies": {
-    "@faker-js/faker": "^8.4.1"
-  }
+  "types": "./src/index.d.ts"
 }
