--- a/packages/jsonapi-to-model/project.json
+++ b/packages/jsonapi-to-model/project.json
@@ -3,18 +3,24 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/jsonapi-to-model/src",
   "projectType": "library",
-  "tags": [],
   "targets": {
     "bundler": {
       "executor": "@nx/esbuild:esbuild",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/packages/jsonapi-to-model",
         "main": "packages/jsonapi-to-model/src/index.ts",
         "tsConfig": "packages/jsonapi-to-model/tsconfig.lib.json",
-        "assets": ["packages/jsonapi-to-model/*.md"],
+        "assets": [
+          "packages/jsonapi-to-model/*.md"
+        ],
         "generatePackageJson": true,
-        "format": ["esm", "cjs"]
+        "format": [
+          "esm",
+          "cjs"
+        ]
       }
     },
     "build": {
@@ -58,7 +64,9 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "packages/jsonapi-to-model/jest.config.ts"
       }
