--- a/packages/toolkit/project.json
+++ b/packages/toolkit/project.json
@@ -3,7 +3,6 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/toolkit/src",
   "projectType": "library",
-  "tags": [],
   "targets": {
     "bundler": {
       "executor": "@nx/esbuild:esbuild",
@@ -59,14 +58,29 @@
       ]
     },
     "lint": {
-      "executor": "@nx/eslint:lint"
+      "executor": "@nx/linter:eslint",
+      "outputs": ["{options.outputFile}"],
+      "options": {
+        "lintFilePatterns": [
+          "packages/toolkit/**/*.ts",
+          "packages/toolkit/package.json"
+        ]
+      }
     },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "packages/toolkit/jest.config.ts"
+        "jestConfig": "packages/toolkit/jest.config.ts",
+        "passWithNoTests": true
+      },
+      "configurations": {
+        "ci": {
+          "ci": true,
+          "codeCoverage": true
+        }
       }
     }
-  }
+  },
+  "tags": []
 }
