--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@guildadev/toolkit",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": false,
   "type": "module",
   "main": "./src/index.js",
@@ -12,8 +12,9 @@
     }
   },
   "dependencies": {
+    "@guildadev/get-initials": "1.0.0",
+    "@guildadev/jsonapi-to-model": "1.0.0",
     "@guildadev/remove-falsy-keys": "1.0.0",
-    "@guildadev/remove-nil-keys": "1.0.1",
-    "@guildadev/get-initials": "1.0.0"
+    "@guildadev/remove-nil-keys": "1.0.1"
   }
 }
