--- a/packages/toolkit/project.json
+++ b/packages/toolkit/project.json
@@ -6,18 +6,26 @@
   "targets": {
     "bundler": {
       "executor": "@nx/esbuild:esbuild",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/packages/toolkit",
         "main": "packages/toolkit/src/index.ts",
         "tsConfig": "packages/toolkit/tsconfig.lib.json",
-        "assets": ["packages/toolkit/*.md"],
+        "assets": [
+          "packages/toolkit/*.md"
+        ],
         "generatePackageJson": true,
-        "format": ["esm", "cjs"],
+        "format": [
+          "esm",
+          "cjs"
+        ],
         "external": [
           "@guildadev/remove-nil-keys",
           "@guildadev/remove-falsy-keys",
-          "@guildadev/get-initials"
+          "@guildadev/get-initials",
+          "@guildadev/jsonapi-to-model"
         ]
       }
     },
@@ -59,7 +67,9 @@
     },
     "lint": {
       "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
         "lintFilePatterns": [
           "packages/toolkit/**/*.ts",
@@ -69,7 +79,9 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "packages/toolkit/jest.config.ts",
         "passWithNoTests": true
